# pyclaw-demo

./: .gitignore  AGENTS.md  CRON_USAGE.md  GEMINI.md  INSTALL.md  PRD-v0.7.0-Agent-Core-Enhancement.md  README.md  RELEASE_NOTES_v0.10.0.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.8.1.md  RELEASE_NOTES_v0.8.2.md  ROADMAP.md  mcp_research.md  pyproject.toml  requirements-dev.txt  requirements-extra.txt  requirements.txt  start.sh  try_import.py
.playwright-cli/: page-2026-05-30T15-20-26-245Z.yml  page-2026-05-30T15-23-37-446Z.yml  page-2026-05-30T15-27-26-624Z.yml  page-2026-05-30T15-32-20-837Z.yml
config/: config.example.yaml
packaging/homebrew/: pyclaw.rb
pyclaw/: __main__.py
pyclaw/channels/: base.py  feishu.py  telegram.py  wechat.py
pyclaw/cli/: main.py
pyclaw/core/: agent.py  answer_quality.py  artifact_acceptance.py  artifact_synthesis.py  artifact_verification.py  artifacts.py  completion_contract.py  deliverable_workflow.py  exec_approval.py  memory.py  message.py  path_discovery.py  public_sanitize.py  session.py  skill_context.py  skill_evidence.py  skill_manifest.py  skill_workspace.py
pyclaw/cron/: __init__.py  jobs.py  scheduler.py  tools.py
pyclaw/gateway/: gateway.py
pyclaw/infra/: config.py
pyclaw/models/: base.py  local.py  openai.py
pyclaw/tools/: __init__.py  base.py  code_search.py  files.py  learn_skill.py  mcp_client.py  memory_ops.py  memory_search.py  python_interpreter.py  registry.py  save_skill.py  skill_activation.py  sub_agent.py  terminal.py  (+4 more)
scripts/: install.sh  pyclaw.plist  service.sh
skills/: hello.py  install_skill.py
tests/: test_agent.py  test_channels.py  test_config.py  test_cron.py  test_exec_approval.py  test_files.py  test_gateway.py  test_memory.py  test_registry.py  test_session.py  test_system_prompt.py  test_terminal.py  test_web_extract.py  test_web_search.py
(+6 files in other folders)
