[tool.poetry]
name = "pyclaw"
version = "0.1.0"
description = "Python AI Agent - OpenClaw inspired personal assistant"
authors = ["Your Name <your@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = {extras = ["job-queue"], version = "^20.7"}
openai = "^1.12.0"
pydantic = "^2.6.0"
pyyaml = "^6.0.1"
structlog = "^24.1.0"
aiosqlite = "^0.19.0"
typer = {extras = ["all"], version = "^0.9.0"}
aiohttp = "^3.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.2.0"
mypy = "^1.8.0"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
