[project]
name = "pyclaw"
version = "0.9.0"
description = "Python AI Agent - Intelligent assistant with Multi-Agent collaboration, ReAct reasoning, and Cross-Channel File Support"
authors = [
  { name="Xiang Rong", email="xiang.rong@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-telegram-bot[job-queue]>=20.7",
  "openai>=1.12.0",
  "pydantic>=2.6.0",
  "pyyaml>=6.0.1",
  "structlog>=24.1.0",
  "aiosqlite>=0.19.0",
  "typer[all]>=0.9.0",
  "aiohttp>=3.9.0",
  "lark-oapi>=1.2.0",
  "mcp>=1.0.0",
  "qrcode>=8.0",
  "cryptography>=42.0",
  "lancedb>=0.25.0",
  "pyarrow>=19.0.0",
  "tantivy>=0.22.0",
]

[project.scripts]
pyclaw = "pyclaw.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
